Implemented BoardView with TileSubjectView to show the tiles. Minor changes to LoginPage. Fixed a bug in SizeChangeListener to create also the window if no text is used inside a page.

--- a/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
+++ b/src/main/resources/it.polimi.ingsw/layout/login/LoginPage.css
@@ -13,7 +13,7 @@
 }
 
 #myShelfieTitleImageView {
-    -fx-background-image: url('../../graphical.resources/publisher.material/Title_2000x2000px.png');
+    -fx-background-image: url('../../graphical.resources/publisher.material/title_big.png');
     -fx-background-size: contain;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center center;
