--- a/src/main/resources/it.polimi.ingsw/layout/board/BoardView.css
+++ b/src/main/resources/it.polimi.ingsw/layout/board/BoardView.css
@@ -4,7 +4,7 @@
 }
 
 #livingRoomAnchor {
-    -fx-background-image: url('it.polimi.ingsw/graphical.resources/boards/living_room.png');
+    -fx-background-image: url('../../graphical.resources/boards/living_room.png');
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
     -fx-background-size: cover;
